fix logo spacing.

--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -32,7 +32,7 @@
 
   h1 {
     color: $primaryColor;
-    font-weight: bolder;
+    margin: 0;
   }
 }
 
@@ -55,8 +55,6 @@
       text-align: center;
       padding: .3rem 0;
       transition-duration: 200ms;
-
-      
     }
   }
 }
